coucou je vais tout casser

--- a/NodeVisionProject/index.html
+++ b/NodeVisionProject/index.html
@@ -40,8 +40,8 @@
     <script src="http://localhost:52310/view/UIattribute.js"></script>
     <script src="http://localhost:52310/view/UInode.js"></script>
     <script src="http://localhost:52310/view/UIgraph.js"></script>
-    <script src="http://localhost:52310/view/UIbranch.js"></script>
-	<script src="http://localhost:52310/view/UIbar.js"></script>
+    <script src="http://localhost:52310/view/UIbranche.js"></script>
+	<script src="http://localhost:52310/view/UIbare.js"></script>
     <script src="http://localhost:52310/view/UIpreferencepopup.js"></script>
     <script src="http://localhost:52310/view/UIpopup.js"></script>
     <!--Controller-->
@@ -61,8 +61,5 @@
          // Web socket Client
         // var socket = io();
     </script>
-
-   
-
 </body>
 </html>
