--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
         
         <script>
           System.config({
-            packages: {'app': {defaultExtension: 'js'}}
+            packages: {'js/app': {defaultExtension: 'js'}}
           });
-          System.import('app/graphUI');
+          System.import('js/app/graphUI');
           
         //   var socket = io();
         var socket = io.connect('http://localhost:8080', {resource: 'nodejs'});
