--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
             packages: {'app': {defaultExtension: 'js'}}
           });
           System.import('app/graphUI');
+          System.import('app/connexionUI');
         var socket = io.connect('http://localhost:8888', {resource: 'nodejs'});
         </script>
     </head>
