Attributes loading : OK

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             packages: {'js/app': {defaultExtension: 'js'}}
           });
           System.import('js/app/graphUI');
-          System.import('js/app/connexionUI');
+          //System.import('js/app/connexionUI');
         var socket = io.connect('http://localhost:8888', {resource: 'nodejs'});
         </script>
     </head>
