icon : Connected User dynamics OK

--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -24,8 +24,8 @@
                 <li><a (click)="authentication.logout()">Log Out</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <img src="https://avatars.githubusercontent.com/u/8791187?v=3" width="50" height="50" class="img-circle">
-                <img src="https://avatars.githubusercontent.com/u/8791187?v=3" width="50" height="50" class="img-circle">
+                <img src="{{authentication.getPicture()}}" width="50" height="50" class="img-circle">
+                
             </ul>
         </div>
     </nav> 
