--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -24,8 +24,7 @@
                 <li><a (click)="authentication.logout()">Log Out</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <img src="{{authentication.getPicture()}}" width="50" height="50" class="img-circle">
-                
+                <img title="{{authentication.getMail()}}" src="{{authentication.getPicture()}}" width="45" height="45" class="img-circle">
             </ul>
         </div>
     </nav> 
