--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -18,6 +18,25 @@
                             </li>
                         </ul>
                     </li>
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role= "button" aria-haspopup="true" aria-expanded="false">
+                            <span class="badge" *ng-if="notifications.length>0">{{notifications.length}}</span> Notifications<span class="caret" > </span></a>
+                        <ul class="dropdown-menu">
+                            <li *ng-for="#notif of notifications">
+                                <div class="row">
+                                    <div class="col-md-9">{{notif}}</div>
+                                    <div class="col-md-3">
+                                        <div class="row">
+                                            <span class="glyphicon glyphicon-ok" style="color:green" aria-hidden="true"></span>
+                                            <span class="glyphicon glyphicon-remove" style="color:#ff1a1a" aria-hidden="true"></span>
+                                        </div>
+                                    </div>     
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
             <ul class="nav navbar-nav navbar-right">   
@@ -25,7 +44,6 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <img src="{{authentication.getPicture()}}" width="50" height="50" class="img-circle">
-                
             </ul>
         </div>
     </nav> 
@@ -35,13 +53,13 @@
                 <div class="modal-header">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 *ng-if="!title_state" (dblclick)="title_state=true;">{{node.name}}</h3>
+                            <h3 *ng-if="!title_state" (dblclick)="title_state=true">{{node.name}}</h3>
                             <input #node_name *ng-if="title_state" class="form-control" value="{{node.name}}" placeholder="Node Name"                                       
                                 (keyup.enter)="update_node(node_name.value);" 
                                 (blur)="update_node(node_name.value);"
                                 >
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" *ng-if="!isUser(node)">
                             <div class="btn-group pull-right" role= "group">
                                 <button class="btn btn-info btn-lg" type= "button" (click)="add_attribute_line()"> 
                                     <img src="lib/img/add_attribute.png" > 
@@ -60,12 +78,13 @@
                     </div>
                 </div>
                 <div class="modal-body">
-                    <div class="row">
+                    <div class="row" *ng-if="!isUser(node)">
                         <label class="col-md-3"> name </label>
                         <label class="col-md-3"> value </label>
                     </div>
                     <div class="form-group row" *ng-for="#attribute of node.attributes">
-                        <div class="col-md-3"><input #attribute_name class="form-control" value="{{attribute.name}}" typename="text" (blur) = "add_attribute(attribute_name.value, attribute_value.value)"></div> 
+                        <div class="col-md-3" *ng-if="!isUser(node)"><input #attribute_name class="form-control" value="{{attribute.name}}" typename="text" (blur) = "add_attribute(attribute_name.value, attribute_value.value)"></div> 
+                        <div class="col-md-3" *ng-if="isUser(node)"><label>{{attribute.name}}</label></div> 
                         <div class="col-md-3"><input #attribute_value class="form-control" value="{{attribute.value}}" typename="text" (blur) = "add_attribute(attribute_name.value, attribute_value.value)"></div> 
                         <div class="col-md-6">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true" (click)="delete_attribute(attribute)" ></span>
