--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -18,13 +18,30 @@
                             </li>
                         </ul>
                     </li>
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role= "button" aria-haspopup="true" aria-expanded="false">
+                            <span class="badge" *ng-if="notifications.length>0">{{notifications.length}}</span> Notifications<span class="caret" > </span></a>
+                        <ul class="dropdown-menu">
+                            <li *ng-for="#notif of notifications">
+                                <div class="row">
+                                    <div class="col-md-9">{{notif}}</div>
+                                    <div class="col-md-3">
+                                        <div class="row">
+                                            <span class="glyphicon glyphicon-ok" style="color:green" aria-hidden="true"></span>
+                                            <span class="glyphicon glyphicon-remove" style="color:#ff1a1a" aria-hidden="true"></span>
+                                        </div>
+                                    </div>     
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <ul class="nav navbar-nav navbar-right">   
                 <li><a (click)="authentication.logout()">Log Out</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <img src="{{authentication.getPicture()}}" width="50" height="50" class="img-circle">
                 <img title="{{authentication.getMail()}}" src="{{authentication.getPicture()}}" width="45" height="45" class="img-circle">
             </ul>
         </div>
