ok j'ai rétabli un peu le truc

--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -49,16 +49,16 @@
                         <div class="col-md-9">
                             <div class="btn-group pull-right" role= "group">
                                 <button class="btn btn-info btn-lg" type= "button" (click)="add_attribute()"> 
-                                    <img src="lib/img/add_attribute.png" > 
+                                    <img src="src/lib/img/add_attribute.png" > 
                                 </button>
                                 <button class="btn btn-success btn-lg" type="button" (click)="add_node()"> 
-                                    <img src="lib/img/add_child.png" >
+                                    <img src="src/lib/img/add_child.png" >
                                 </button>
                                 <button class="btn btn-danger btn-lg" type="button" (click)="delete_node_and_sons()"> 
-                                    <img src="lib/img/delete_node_and_son.png"> 
+                                    <img src="src/lib/img/delete_node_and_son.png"> 
                                 </button>
                                 <button class="btn btn-danger btn-lg" type="button" (click)="delete_node()"> 
-                                    <img src="lib/img/delete_node.png">
+                                    <img src="src/lib/img/delete_node.png">
                                 </button>
                             </div>
                         </div>
