--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
 
         <script src="./lib/js/jquery-2.1.4.min.js"></script>
         
-        <script src="../node_modules/systemjs/dist/system.src.js"></script>
-        <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
-        <script src="../node_modules/es6-shim/es6-shim.js"></script>
+        <script src="./node_modules/systemjs/dist/system.src.js"></script>
+        <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
+        <script src="./node_modules/es6-shim/es6-shim.js"></script>
         
         <script src="./lib/js/jquery-ui.min.js"></script>
         <script src="./lib/js/jquery-colorpicker.js"></script>
         <script src="./lib/js/bootstrap.min.js"></script>
         <script src="./lib/js/d3.js"></script>
 
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="./lib/css/bootstrap-min.css">
         <link rel="stylesheet" href="./lib/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="./lib/css/jquery-ui.min.css">
