--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -29,7 +29,7 @@
                 <li><a (click)="authentication.logout()">Log Out</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" *ng-for="#user of users_authentified">
-                <img title="{{user.mail}}" src="{{user.node.image_path}}" width="45" height="45" (click)="show_profile();" class="img-circle">
+                <img title="{{user.mail}}" src="{{user.img_path}}" width="45" height="45" (click)="show_profile();" class="img-circle">
             </ul>
         </div>
     </nav>
