--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -8,14 +8,12 @@
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Branches <span class="caret" > </span></a>
             <ul class="dropdown-menu">
               <li *ng-for="#branch of branches">
-                <div class="row">
-                  <div class="col-md-6">{{branch.name}}</div>
-                  <div class="col-md-6">
-                    <span class="glyphicon glyphicon-eye-open" aria-hidden="true" (click)="show_branch(branch)"></span>
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true" (click)="show_update_branch(branch)"></span>
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true" (click)="delete_branch(branch)"></span>
+                  <div class="col-md-5">{{branch.name}}</div>
+                  <div class="col-md-7 pull-right">
+                    <span class="glyphicon glyphicon-trash pull-right" aria-hidden="true" (click)="delete_branch(branch)"></span>
+                    <span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true" (click)="show_update_branch(branch)"></span>
+                    <span class="glyphicon glyphicon-eye-open pull-right" aria-hidden="true" (click)="show_branch(branch)"></span>
                   </div>
-                </div>
               </li>
             </ul>
           </li>
