--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -159,14 +159,22 @@
                     </div>
                     <div class="col-md-6">
                         <h3 class='pull-right'>{{"["+ edge.type +"]"}}</h3>
+                        <button class="btn btn-success btn-lg pull-right" type= "button">Add Weight</button>
                     </div>  
                 </div>
             </div>
             <div class="modal-body">
-                <button class="btn btn-danger btn-lg" type= "button" (click)="delete_edge()">Delete edge</button>
+                <div class="form-group row" *ng-for="#w of edge.weights">
+                        <div class="col-md-5"><input #attribute_name class="form-control" value="{{attribute.name}}" typename="text" (blur) = "update_attribute(attribute,attribute_name.value, attribute_value.value)"></div>
+                        <div class="col-md-5"><input #attribute_value class="form-control" value="{{attribute.value}}" typename="text" (blur) = "update_attribute(attribute, attribute_name.value, attribute_value.value)"></div> 
+                        <div class="col-md-2">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true" (click)="delete_weight(w)" ></span>
+                        </div> 
+                    </div>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-default" (click)="edgemodalstate=false;">Close</button>
+                <button class="btn btn-danger" type= "button" (click)="delete_edge()">Delete edge</button>
+                <button class="btn btn-default" type= "button" (click)="edgemodalstate=false;">Close</button>
             </div>
         </div>
     </div>
