--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -140,7 +140,8 @@
             <div class="form-group">
               <label class="col-sm-3 control-label">Color :</label>
               <div class="col-sm-3">
-                <input #color class="form-control" type="text" id="color" placeholder="color" value="{{branch.color}}" (blur)="branch.color = color.value"></input>
+                <input #color class="form-control" type="color" id="color" placeholder="color" value="{{branch.color}}" (blur)="branch.color = color.value">
+                </input>
               </div>
             </div>
           </form>
