--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -43,12 +43,12 @@
                          <label class="col-md-3 control-label">Change view to :</label>
                          <div *ng-if="preferedView1" class="row">
                              <div class="col-md-8">
-                                 <input class="btn btn-default btn-lg" type="button" id="view0" value="Attributes in modal form" (click)="user.preferedView = 0; show_profile();"/>
+                                 <input class="btn btn-default btn-lg" type="button" id="view0" value="Attributes in modal form" (click)="user.preferedView = 0; redraw();show_profile();"/>
                              </div>
                          </div>
                         <div *ng-if="preferedView0" class="row">
                             <div class="col-md-8">
-                                <input class="btn btn-default btn-lg" type="button" id="view1" value="Attributes as leaf" (click)="user.preferedView = 1;show_profile();">
+                                <input class="btn btn-default btn-lg" type="button" id="view1" value="Attributes as leaf" (click)="user.preferedView = 1; redraw();show_profile();">
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-default" (click)="nodemodalstate=false;">Close</button>
+          <button class="btn btn-default" (click)="nodemodalstate=false;">Close</button>
         </div>
       </div>
     </div>
@@ -263,15 +263,25 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">Détail de log</h4>
+                <h4 class="modal-title" id="myModalLabel">Détail de l'évenement</h4>
             </div>
             <div class="modal-body">
-                <div class="form-group row">
-                    <div class="col-sm-2">
-                        <h2 class="col-sm-12 control-label">Titre</h2>
+                <div class="form-group">
+                    <div class="row">
+                        <div class ="col-md-2">
+                            <label>Message :</label>
+                        </div>
+                        <div class="col-md-10">
+                            <label>{{detailLogShown._message}}</label>
+                        </div>
                     </div>
-                    <div class="col-sm-10">
-                        <label class="form-control" value="MATCH (s:Node),(t:Node) WHERE s.name='n1' AND t.name='n2' CREATE (s)-[r:HIERARCHICAL]->(t);" typename="text">
+                    <div class="row">
+                        <div class ="col-md-2">
+                            <label>Requête :</label>
+                        </div>
+                        <div class="col-md-10">
+                            <label>{{detailLogShown._details}}</label>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -284,7 +294,7 @@
 <div id = "r">    
 <div *ng-for="#notif of notifs" class="alert alert-warning alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  {{notif}} <a data-toggle="modal" data-target="#detaillogmodal">Détails</a>
+  {{notif._message}} <a data-toggle="modal" data-target="#detaillogmodal" (click)="show_detail_log(notif._message)">Détails</a>
 </div>
 </div>
 <!--
