correction bug edge

--- a/src/html/graphUI.html
+++ b/src/html/graphUI.html
@@ -67,8 +67,8 @@
         <div class="modal-header">
           <div class="row">
             <div class="col-md-5">
-                <div class="col-md-4 imgWrap">
-                <img title="{{node.name}}" src="{{node.image_path}}" width="75" height="75"  alt="lol" class="img-circle">
+                <div class="col-md-4 imgWrap" draggable="false" style="-moz-user-select: none;">
+                <img title="{{node.name}}" src="{{node.image_path}}" width="75" height="75"  alt="lol" class="img-circle" draggable="false" style="-moz-user-select: none;">
                 <p class="imgModifier" data-toggle="modal" data-target="#imagemodal">Modifier</p>
                 </div>
                 <div class="col-md-8">
